--- a/business-interests.html
+++ b/business-interests.html
@@ -210,7 +210,7 @@
             <br>
             <label>
                 <input type="checkbox" name="doCompetitionAnalisis" ng-model="vm.searchCompetitors"> ¿Quieres que busque también
-                competidores?
+                chichis?
             </label>
 
 
