--- a/business-interests.html
+++ b/business-interests.html
@@ -209,8 +209,7 @@
         <div >
             <br>
             <label>
-                <input type="checkbox" name="doCompetitionAnalisis" ng-model="vm.searchCompetitors"> ¿Quieres que busque también
-                chichis?
+                <input type="checkbox" name="doCompetitionAnalisis" ng-model="vm.searchCompetitors"> ¿Quieres que también busque competidores?
             </label>
 
 
